[project]
name = "claude-sessions"
version = "0.1.0"
description = "Interactive session picker and resumer for Claude Code"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
claude-sessions = "claude_sessions.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_sessions"]
